# pmole

./: .gitignore  LICENSE  README.md  pyproject.toml  test_file_10kb_words.pm
data/: test_file_10kb_words.txt
pmole/: __init__.py  algo.py  cli.py  convert.py  file_handler.py  globals.py  lzw.py  pmole.py  utils.py
tests/: test_algo_lzw.py
