[tool.poetry]
name = "pmole"
version = "0.1.0"
description = "Restore data from a single .cm file"
authors = ["ramsy0dev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
bitarray = "^3.0.0"
loguru = "^0.7.3"
typer = "^0.15.1"
pytest = "^8.3.4"
beautifultable = "^1.1.0"
chardet = "^5.2.0"
charset-normalizer = "^3.4.1"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
pmole = "pmole:cli.run"

[tool.pdm.dev-dependencies]  # or the poetry equivalent
dev = [
    "basedpyright", # you can pin the version here if you want, or just rely on the lockfile
]

[tool.basedpyright]
# many settings are not enabled even in strict mode, which is why basedpyright includes an "all" option
# you can then decide which rules you want to disable
typeCheckingMode = "standard"
reportMissingSuperCall = false
